--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ShowMore</string>
     <string name="search_hint">Enter your search</string>
+    <string name="internet_unavailable">Please check the network connection and try again.</string>
 </resources>
